--- a/app/globals.css
+++ b/app/globals.css
@@ -24,3 +24,12 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+html,body{
+  overflow-y: scroll; /* Ensures content remains scrollable */
+  scrollbar-width: none; /* For Firefox */
+  -ms-overflow-style: none; 
+}
+html::-webkit-scrollbar ,
+body::-webkit-scrollbar {
+  display: none; /* For Chrome, Safari, and Opera */
+}
